--- a/templates/back_office/gererAdmin.html.twig
+++ b/templates/back_office/gererAdmin.html.twig
@@ -66,7 +66,7 @@
                                 </div>
 
                                 
-                                <button type="submit" class="btn btn-primary">Valider</button>
+                                <button type="submit" class="btn btn-primary btn-block">Valider</button>
                             {{ form_end(form) }}
                             <br/>
                         </div>
