--- a/templates/back_office/gererUtilisateur.html.twig
+++ b/templates/back_office/gererUtilisateur.html.twig
@@ -50,7 +50,7 @@
                                     {{ form_widget(form.mdp, { attr: {'class': 'form-control'} })}}
                                 </div>
                                 
-                                <button type="submit" class="btn btn-primary">Valider</button>
+                                <button type="submit" class="btn btn-primary btn-block">Valider</button>
                             {{ form_end(form) }}
                             <br/>
                         </div>
