--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="{{ path('back_office') }}">Gérer les utilisateurs</a>
+                                {% if app.user.role == 1 %}<a class="dropdown-item" href="{{ path('modifierParametres') }}">Paramètres</a>{% endif %}
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{{ path('logout') }}"><i class="fas fa-sign-out-alt"></i> Déconnexion</a>
                             </div>
