--- a/templates/back_office/modifierParametres.html.twig
+++ b/templates/back_office/modifierParametres.html.twig
@@ -45,7 +45,7 @@
                                         <button type="submit" class="btn btn-primary btn-block">Valider</button>
                                     {{ form_end(formLCMS) }}
                                     <br/>
-                                        <a href="{{ path('supprParam') }}" class="btn btn-danger btn-block">Réinitialiser</a>
+                                        <a href="{{ path('supprParamLCMS') }}" class="btn btn-danger btn-block">Réinitialiser</a>
                                     <br/>
                                 </div>
                                 {% endif %}
@@ -74,7 +74,7 @@
                                         <button type="submit" class="btn btn-primary btn-block">Valider</button>
                                     {{ form_end(formLMS) }}
                                     <br/>
-                                        <a href="{{ path('supprParam') }}" class="btn btn-danger btn-block">Réinitialiser</a>
+                                        <a href="{{ path('supprParamLMS') }}" class="btn btn-danger btn-block">Réinitialiser</a>
                                     <br/>
                                 </div>
                                 {% endif %}</div>
