--- a/templates/back_office/modifierParametres.html.twig
+++ b/templates/back_office/modifierParametres.html.twig
@@ -24,14 +24,12 @@
                                 {% if theUser.role == 1 %}
                                 <div class="col-sm bg-white">
                                     <br/>
+                                    <h3>Paramétrer LCMS</h3>
+                                    <br/>
                                     {{ form_start(formLCMS) }}
                                         <div class="form-group">   
                                             <label>URL</label>
                                             {{ form_widget(formLCMS.urllcms, { attr: {'class': 'form-control'} })}}
-                                        </div>
-                                        <div class="form-group">   
-                                            <label>Login Super Admin</label>
-                                            {{ form_widget(formLCMS.loginsuperadmin, { attr: {'class': 'form-control'} })}}
                                         </div>
                                         <div class="form-group">   
                                             <label>Login</label>
@@ -49,18 +47,15 @@
                                     <br/>
                                 </div>
                                 {% endif %}
-                                <div class="col-sm">
                                 {% if theUser.role == 1 %}
                                 <div class="col-sm bg-white">
+                                    <br/>
+                                    <h3>Paramétrer LMS</h3>
                                     <br/>
                                     {{ form_start(formLMS) }}
                                         <div class="form-group">   
                                             <label>URL</label>
                                             {{ form_widget(formLMS.urllms, { attr: {'class': 'form-control'} })}}
-                                        </div>
-                                        <div class="form-group">   
-                                            <label>Login Super Admin</label>
-                                            {{ form_widget(formLMS.loginsuperadmin, { attr: {'class': 'form-control'} })}}
                                         </div>
                                         <div class="form-group">   
                                             <label>Login</label>
@@ -77,7 +72,26 @@
                                         <a href="{{ path('supprParamLMS') }}" class="btn btn-danger btn-block">Réinitialiser</a>
                                     <br/>
                                 </div>
-                                {% endif %}</div>
+                                {% endif %}
+                                {% if theUser.role == 1 %}
+                                <div class="col-sm bg-white">
+                                    <br/>
+                                    <h3>Paramétrer super admin</h3>
+                                    <br/>
+                                    {{ form_start(formSA) }}
+                                        <div class="form-group">   
+                                            <label>Login Super Admin</label>
+                                            {{ form_widget(formSA.loginsuperadmin, { attr: {'class': 'form-control'} })}}
+                                        </div>
+                                        
+                                        <button type="submit" class="btn btn-primary btn-block">Valider</button>
+                                    {{ form_end(formSA) }}
+                                    <br/>
+                                        <a href="{{ path('supprParamSuperAdmin') }}" class="btn btn-danger btn-block">Réinitialiser</a>
+                                    <br/>
+                                </div>
+                                {% endif %}
+                                </div>
                             </div>
                         </div>
                     </div>
