--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-
+{% if app.user.verrouadmin == false %}
 <html>
     <head>
         <meta charset="UTF-8">
@@ -120,4 +120,7 @@
         </footer>
     </body>
 </html>
+{% else %}
+<h1>Votre compte est verrouillé</h1>
+{% endif %}
 {% endif %}
