--- a/templates/security/index.html.twig
+++ b/templates/security/index.html.twig
@@ -110,6 +110,13 @@
                     <div class="col-sm" style="background-color : rgb(255, 255, 255);">
                     <br/>
                     <form method = "post">
+  
+                        <!-- Affiche un message erreur connexion impossible car admin verrouillé -->
+                        {% for message in app.flashes('danger') %}
+                            <div class="alert alert-danger" role="alert">
+                            {{ message }}
+                            </div>
+                        {% endfor %}
                         {% if error %}
                             <div class = "alert alert-danger">Identifiant ou mot de passe incorrect</div>
                         {% endif %}
