--- a/templates/security/index.html.twig
+++ b/templates/security/index.html.twig
@@ -134,9 +134,9 @@
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate')}}">
 
                         <button class="btn btn-primary btn-rounded btn-block" type="submit">Se connecter</button>
-                        <hr>
+                     <!--   <hr>
 
-                        <!-- Social login -->
+                        <!-- Social login 
                         <button type="button" class="btn btn-danger btn-rounded btn-block">
                             <a href="#" class="mx-2" role="button" style="color: white;">
                                 <i class="fab fa-google" style="color: white;"></i>
@@ -147,9 +147,9 @@
                         <button type="button" class="btn btn-indigo btn-rounded btn-block">
                             <a href="#" class="mx-2" role="button" style="color: white;">
                                 <i class="fab fa-facebook" style="color: white;"></i>
-                                AUTHENTIFICATION AVEC FACEBOOK
+                                AUTHENTIFICATION AVEC FACEBOOK-
                             </a>
-                        </button>
+                        </button>-->
                         <br/>
                     </form>
                     </div>
