--- a/templates/menu_deroulant.html.twig
+++ b/templates/menu_deroulant.html.twig
@@ -13,13 +13,10 @@
                 <a href="{{path('tsa')}}"><img src="{{ asset('image/'~ 'btn_ts_academy.png')}}" id="DC3" height="100px" style="position: relative;"/></a>
             </li>
             <li>
-                <a href="#"><img src="{{ asset('image/'~ 'btn_dispatcher.png')}}" id="DC4" height="100px" style="position: relative;"/></a>
+                <a href="https://dgtlcd001.dgtconcept.net"><img src="{{ asset('image/'~ 'btn_dispatcher.png')}}" id="DC4" height="100px" style="position: relative;"/></a>
             </li>
             <li>
                 <a href="{{path('help')}}"><img src="{{ asset('image/'~ 'btn_help.png')}}" id="DC5" height="100px" style="position: relative;"/></a>
-            </li>
-            <li>
-                <a href="{{path('back_office')}}"><img src="{{ asset('image/'~ 'btn_backoffice.png')}}" id="DC6" height="100px" style="position: relative;"/></a>
             </li>
             </ul>
         </nav>
